<resources>
    <string name="app_name">QuizmasterAndroid</string>
    <string name="leftHanded">Vänsterhänt</string>
    <string name="rightHanded">Högerhänt</string>
    <string name="right_left_handed">Är du vänster- eller högerhänt?</string>
    <string name="welcome_text">Välkommen till Quizmaster!</string>
    <string name="choose_categories">Välj 4 kategorier!</string>
    <string name="cat1">Kultur</string>
    <string name="cat2">Geografi</string>
    <string name="cat3">Naturvetenskap</string>
    <string name="cat4">Samhälle</string>
    <string name="cat5">Historia</string>
    <string name="cat6">Sport</string>
    <string name="start_game_button_text">Start</string>
    <string name="cat_is">Kategorin är</string>
    <string name="press_to_contine">Tryck på skärmen för att gå vidare</string>
    <string name="your_grade">Ditt Betyg:</string>
    <string name="best_category">Bästa kategorin:</string>
    <string name="restart_game">Spela igen</string>
    <string name="worst_category">Sämsta kategorin:</string>
</resources>
