<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".rightQuizOptions">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/choose_categories"
        android:textAlignment="viewEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/thelayout"
        android:layout_width="match_parent"
        android:layout_height="304dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="40dp"
            android:text="@string/cat1"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="40dp"
            android:text="@string/cat2"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="40dp"
            android:text="@string/cat3"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="40dp"
            android:text="@string/cat4"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="40dp"
            android:text="@string/cat5"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="30dp"
            android:paddingTop="15dp"
            android:paddingEnd="40dp"
            android:text="@string/cat6"
            android:textSize="24sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>