<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".leftQuizOptions">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/choose_categories"
        android:textAlignment="viewEnd"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/thelayout"
        android:layout_width="match_parent"
        android:layout_height="303dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="40dp"
            android:text="@string/cat1"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="40dp"
            android:text="@string/cat2"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="40dp"
            android:text="@string/cat3"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="40dp"
            android:text="@string/cat4"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="40dp"
            android:text="@string/cat5"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/switch6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingLeft="30dp"
            android:paddingTop="15dp"
            android:paddingRight="40dp"
            android:text="@string/cat6"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="155dp"
        android:layout_height="91dp"
        android:layout_marginBottom="32dp"
        android:onClick="startTheGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/ic_menu_slideshow" />

</android.support.constraint.ConstraintLayout>